--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-hook-form": "^7.54.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
+    "react-modal": "^3.16.3",
+    "react-modal-image": "^2.6.0",
     "react-scroll": "^1.9.0",
     "react-typed": "^2.0.12"
   },
