--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^5.4.0",
     "react-modal": "^3.16.3",
     "react-modal-image": "^2.6.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-scroll": "^1.9.0",
     "react-typed": "^2.0.12"
   },
